update Exceptions